style fix(dashboard user info) alignes and i,proves top info display layout

--- a/public/styles.css
+++ b/public/styles.css
@@ -39,26 +39,36 @@ main{
 }
 /* user dashboard*/
 #folder-info{
-    width: 100%;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
     display: grid; 
     grid-template-columns: 4fr 1fr; 
     grid-template-rows: 1fr;
-    justify-self: center;
+    justify-self: stretch;
     align-items: center;
     border-bottom: 1px solid rgb(185, 185, 185);
     box-shadow: 0px 0px 24px -15px rgba(66, 68, 90, 1);
 }
 #file-info{
     margin: 20px;
-    padding: 20px;
-    width: 100%;
+    padding: 10px;
+    border-radius: 20px;
     display: grid; 
-    grid-template-columns: 1fr 1fr 3fr; 
+    grid-template-columns: 2fr 2fr ; 
     grid-template-rows: 1fr;
-    justify-items: center;
+    justify-self: stretch;
     align-items: center;
     border-bottom: 1px solid rgb(185, 185, 185);
     box-shadow: 0px 0px 24px -15px rgba(66, 68, 90, 1);
+}
+#add-file-btn{
+    cursor: pointer; 
+    padding: 30px; 
+    background-color: rgb(4, 6, 15); 
+    color: rgb(164, 165, 168);
+    border-radius: 20px;
+
 }
 #storage-container{
     padding: 20px;
@@ -73,9 +83,7 @@ main{
     gap: 5px;
     max-height: 100%;
 }
-.folder-Btn{
-    
-}
+
 .storage-Btn{
     outline: 1px solid gray;
     border-radius: 20px;
@@ -87,6 +95,7 @@ main{
     padding-right: 20px;
     box-shadow: 0px 0px 24px -15px rgba(66, 68, 90, 1);
     gap: 5px;
+    align-content: center;
 }
 .storage-Btn:hover{
     background-color: rgb(255, 255, 255);
@@ -99,6 +108,7 @@ main{
     flex-direction: row;
     justify-self: center;
     align-self: center;
+    gap: 5px;
     
 }
 
